ネットワーク1巡、セキュリティ少し

--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -1,5 +1,45 @@
 # 12.セキュリティ
 
+``` txt : セキュリティ関係早見表
+## ホストレベルのセキュリティ
+・スーパーサーバー
+・xinetd
+・/etc/xinetd.conf
+・/etc/xinted.d
+・TCP Wrapper ::
+・lsof  :: 
+・nmap  :: 
+・fuser :: 
+
+## ユーザーに対するセキュリティ管理
+・/etc/nologin :: rootユーザ以外のユーザのログインを禁止するファイル
+・/etc/sudoers :: sudoコマンドの設定を行うファイル
+・/etc/shadow  :: シャドウパスワードやパスワードの有効期限に関する情報が記載されるファイル
+・change :: ユーザーのパスワードの有効期限を表示・変更するコマンド
+・su     :: 一時的に別のユーザーになるコマンド
+・sudo   :: 別のユーザーの権限でプログラムを実行するためのコマンド
+・visudo :: /etc/sudoersを編集するコマンド。sudoコマンドの利用設定をするコマンド
+・ulimit :: ユーザーが利用できるリソースを制御するコマンド 
+
+## OpenSSH
+・SSH
+・/etc/ssh/sshd_config
+・/etc/ssh/ssh_known_hosts
+・ssh
+・ssh-keygen
+・scp
+・ssh-agent
+・ポート転送
+
+## GnuPGによる暗号化
+・gpg
+
+## その必要なコマンド
+・last :: 
+・w    :: 
+・who  ::
+```
+
 ## ホストレベルのセキュリティ
 
 ・スーパーサーバー  
@@ -125,6 +165,30 @@ SUIDが設定されているファイルを把握しておく必要がある。
 SUIDが設定されているファイルを検索するコマンド  
 `find / -perm -u+s -ls`  
 
+セキュリティ上、ルートユーザの所有権を持ち、かつSUIDが設定されたファイルをすべて把握しておきたい。適切なコマンドはどれか（2つ選択）  
+`find / -perm -u+s -uid 0`  
+`find / -perm -4000 -uid 0`  
+
+SUIDやSGIDが設定されていると、一般ユーザーでもroot権限でファイルを実行できる場合があります。root権限を不正に操作されるとセキュリティ上問題があります。そこで、システムの管理者は、ファイルを検索する「find」コマンドに「-perm」オプションを付けて、SUID/SGIDが設定されたファイルを検索し、普段から把握するように努めます。
+
+■findコマンドの書式
+find [検索場所] -perm -[モード]
+　[モード]で指定されている許可属性ビットのすべてが、ファイルでも立っていたら真
+find [検索場所] -perm +[モード]
+　[モード]で指定されている許可属性ビットのどれか一つが、ファイルでも立っていたら真
+
+SUIDが設定されたモードを数字表現で表すと「4000」、記号表現では「u+s」となります。
+また、「-uid」で所有権を持つユーザIDを、「-gid」で所有権を持つグループIDを指定して検索できます。rootユーザはユーザID、グループIDともに「0」です。
+
+よって正解は
+・find / -perm -u+s -uid 0
+・find / -perm -4000 -uid 0
+です。
+
+その他のコマンドでは「ルートユーザの所有権を持ち、かつSUIDが設定されたファイル」を検索することはできません。
+
+以下は表示例です。
+
 ---
 
 ## ユーザーに対するセキュリティ管理
@@ -162,17 +226,25 @@ chage [オプション] [ユーザー名]
 
 ### suコマンド
 
+su（Switch User）コマンドを使うと、ログイン中に別のユーザーに切り替わる事ができます。  
+
+suコマンドには以下の特徴があります。  
+・引数に「-」をつけると、切り替わる先のユーザの環境変数を使用する  
+・ユーザー名を指定しない場合、rootユーザへ切り替わる  
+・ユーザを切り替える時に求められるパスワードは、切り替わる先のユーザのパスワード  
+・但し、rootユーザから別のユーザに切り替わる時はパスワードは要求されない  
+
 一時的に別のユーザーになるコマンド  
 別の実行ユーザーIDと実行グループIDを持つ新たなシェルを起動するコマンド  
 
 ``` txt
 su [オプション] [-] ユーザー名
 
--あり : 直接ログインしたときと同様の動作を行う。
+-あり :: 直接ログインしたときと同様の動作を行う。
 カレントディレクトリは新しいユーザーのホームディレクトリとなる。
 環境変数が全て初期化される。
 
--なし : 現在の環境をそのままにしてユーザーだけを切り替える。  
+-なし :: 現在の環境をそのままにしてユーザーだけを切り替える。  
 ```
 
 ### sudoコマンド
@@ -180,15 +252,21 @@ su [オプション] [-] ユーザー名
 別のユーザーの権限でプログラムを実行するためのコマンド  
 大抵はrootユーザーとして実行する場合に使われる。  
 
+「sudo」コマンドで、一般ユーザでも、管理者から実行権限を委譲されたコマンドであれば実行できます。  
+
+自身に委譲されているコマンドは「sudo -l」で確認できます。  
+sudoコマンドを実行するとパスワードの入力を求められますが、rootのパスワードではなく、ユーザー自身のパスワードを入力します。  
+権限委譲の設定は「visudo」コマンドで「/etc/sudoers」ファイルを編集することで行います。  
+
 ``` txt
 sudo [オプション] [-u ユーザー名] コマンド
 
 オプション
--l : 許可されているコマンドで表示する
--i : 変更先ユーザーでシェルを起動する(ログイン時の処理を行う)
--s : 変更先ユーザーでシェルを起動する
+-l :: 許可されているコマンドで表示する
+-i :: 変更先ユーザーでシェルを起動する(ログイン時の処理を行う)
+-s :: 変更先ユーザーでシェルを起動する
 
--u ユーザー : rootではなく指定したユーザーでコマンドを実行する
+-u ユーザー :: rootではなく指定したユーザーでコマンドを実行する
 ユーザー名を省略するとrootユーザーで実行する。
 ```
 
@@ -202,18 +280,18 @@ rootユーザーのみ実行可能。
 
 sudoコマンドを実行できるユーザーの設定を行うファイル。  
 sudoコマンド実行時、sudoコマンドはこのファイルを参照してユーザーが実行権限を持っているかどうか判定を行う。  
+visudoコマンドで編集する。  
 エディターで直接、このファイルを開いてはいけないらしい。  
 
 ``` txt
 書式
-ユーザー名 ホスト名=(実行ユーザー名) [NOPASSWD:]コマンド
+権限を委譲するユーザ名 ホスト名=(実行ユーザー名) [NOPASSWD:]委譲するコマンド
 
-
-ユーザー名 : コマンドの実行を許可するユーザー名かグループ名、もしくはALL
-ホスト名 : 実行を許可するホスト名か、IPアドレス、もしくはALL
-実行ユーザー名 : コマンド実行時のユーザー名(省略時はroot)、もしくはALL
-コマンド : 実行を許可するコマンドのパス、もしくはALL
-NOPASSWD: : 指定すると、コマンド実行時にパスワードを問われない
+ユーザー名     :: コマンドの実行を許可するユーザー名かグループ名、もしくはALL
+ホスト名       :: 実行を許可するホスト名か、IPアドレス、もしくはALL
+実行ユーザー名 :: コマンド実行時のユーザー名(省略時はroot)、もしくはALL
+コマンド       :: 実行を許可するコマンドのパス、もしくはALL
+NOPASSWD:      :: 指定すると、コマンド実行時にパスワードを問われない
 ```
 
 studentユーザーのみshutdownコマンドが実行できるように設定する  
