セキュリティ途中まで。 量が多いので、一番最初に概略としてまとめることにした。

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -16,9 +16,9 @@
 export [オプション] [変数名[=値]…]
 
 オプション
--f → シェル変数を参照する
--n → 指定した環境変数をシェル変数に変える
--p → 全てのエクスポートされた変数と関数を全て一覧表示する。
+-f :: シェル変数を参照する
+-n :: 指定した環境変数をシェル変数に変える
+-p :: 全てのエクスポートされた変数と関数を全て一覧表示する。
 ```
 
 **exportコマンドの引数に指定するシェル変数の先頭には`$`は付かない**  
@@ -133,6 +133,29 @@ list-unit-files :: サービス一覧
 
 ---
 
+## /etc/init.d/
+
+「/etc/init.d/」は、SysVinitの動作するシステムにおいて各種サービスの起動スクリプトを置くディレクトリです。  
+起動スクリプトは、initによりシステムの起動時・ランレベルの変更時に実行されるもので、  
+主として各種サービスをランレベルに応じ自動的に起動・終了させるために用いられます。  
+
+各ランレベルに応じたスクリプトは /etc/rc[0-6].d に入っており、以下のようなファイル名をしています。  
+
+``` txt
+S55sshd
+K15httpd
+
+Sは起動、Kは終了の意味。
+2桁の数字は実行順序
+残る部分はサービス名
+```
+
+これらファイルはシンボリックリンクで、/etc/init.d/（サービス名）という起動スクリプトの実体にリンクされています。  
+
+※RHEL7以降など最近のディストリビューションではSysVinitの代わりにsystemdが採用されています。  
+
+---
+
 ## ナイス値
 
 プロセスの優先度を表す値。  
@@ -152,20 +175,20 @@ find [ディレクトリ] [検索式]
 ディレクトリを省略した場合、カレントディレクトリ以下が対象となる。
 
 検索式
--name → ワイルドカードを使用してファイルやディレクトリの一部のみ指定した検索ができる
--atime → 最終アクセス時刻で検索
--mtime → 最終更新時刻で検索
--perm → アクセス権で検索
--size → ファイルサイズ(ブロック単位)で検索
--type → ファイルの種類で検索。 d:ディレクトリ l:シンボリックリンク f:ファイル
--user ユーザー名 : ファイルの所有者で検索
--uid → ユーザーIDで作成したファイルを検索
--print → マッチしたファイルの表示(省略可能)
--print0 → 検索結果をnull文字で区切る
--exec コマンド || \; → マッチしたファイルに対してコマンドを実行する
--ok コマンド || \; → マッチしたファイルに対してコマンドを実行する(確認あり)
--mindepth → 指定した階層より下を検索
--maxdepth → 指定した階層まで検索
+-name                :: ワイルドカードを使用してファイルやディレクトリの一部のみ指定した検索ができる
+-atime               :: 最終アクセス時刻で検索
+-mtime               :: 最終更新時刻で検索
+-perm                :: アクセス権で検索
+-size                :: ファイルサイズ(ブロック単位)で検索
+-type                :: ファイルの種類で検索。 d:ディレクトリ l:シンボリックリンク f:ファイル
+-user ユーザー名     :: ファイルの所有者で検索
+-uid                 :: ユーザーIDで作成したファイルを検索
+-print               :: マッチしたファイルの表示(省略可能)
+-print0              :: 検索結果をnull文字で区切る
+-exec コマンド || \; :: マッチしたファイルに対してコマンドを実行する
+-ok コマンド || \;   :: マッチしたファイルに対してコマンドを実行する(確認あり)
+-mindepth            :: 指定した階層より下を検索
+-maxdepth            :: 指定した階層まで検索
 ```
 
 /homeディレクトリ以下から、ファイル名の末尾が「.rpm」のファイルを検索する。  
@@ -202,11 +225,10 @@ SUIDとSGIDのいずれか片方でも設定されているファイルを検索
 `+`の場合も`/`と同じ動作ではあるが、指定の仕方が古く警告が表示されるらしい。`/`を使って検索すべしとのこと。  
 `find /usr -perm +6000`  
 
-``` txt : <https://atmarkit.itmedia.co.jp/ait/articles/1809/13/news037.html>  
-実行時の権限を指定するSUID（Set User ID）とSGID（Set Goup ID）というパーミッションがLinuxには用意されています。  
-SUIDが設定されているファイルを探したい場合は「u」を付けて「-perm -u+s」と指定するか、パーミッションに「4000」を足して「-perm -4000」のように指定します。  
-同様に、SGIDが設定されているファイルを探したい場合は「g」を付けて「-perm -g+s」とするか、「2000」を足して「-perm -2000」のように指定します。  
-```
+><https://atmarkit.itmedia.co.jp/ait/articles/1809/13/news037.html>  
+>実行時の権限を指定するSUID（Set User ID）とSGID（Set Goup ID）というパーミッションがLinuxには用意されています。  
+>SUIDが設定されているファイルを探したい場合は「u」を付けて「-perm -u+s」と指定するか、パーミッションに「4000」を足して「-perm -4000」のように指定します。  
+>同様に、SGIDが設定されているファイルを探したい場合は「g」を付けて「-perm -g+s」とするか、「2000」を足して「-perm -2000」のように指定します。  
 
 ---
 
@@ -228,9 +250,9 @@ conCATenate(繋ぐ、連結する)
 car [オプション] ファイル1 ファイル2 ...
 
 オプション
--n → 行番号を付ける。
--b → 行番号を付ける。但し空白行には付けない。
--s → 連続した空行を1行にする。
+-n :: 行番号を付ける。
+-b :: 行番号を付ける。但し空白行には付けない。
+-s :: 連続した空行を1行にする。
 
 他にも色々。101で出たのは-nだけ。
 ```
@@ -365,4 +387,3 @@ SUIDのグループバージョン。
 スティッキービット（Sticky Bit）とは、ディレクトリに設定される特殊なアクセス権の事です。  
 スティッキービットが設定されたディレクトリは、すべてのユーザがファイルおよびディレクトリを作成書き込みを行えるようになる。  
 しかし、作成したファイルやディレクトリを削除出来るのは所有者だけとなるというパーミッション。  
-
