--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -1,5 +1,13 @@
 # 7.シェルとシェルスクリプト
 
+``` txt
+## シェル環境のカスタマイズ
+・/etc/profile :: Linuxの標準シェルであるbashの環境設定ファイル。
+
+## シェルスクリプト
+
+```
+
 ## シェル環境のカスタマイズ
 
 ### aliasコマンド
