--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -9,6 +9,27 @@
 - 文字コードの変換  
 - タイムゾーンの設定  
 
+``` txt
+## ユーザーとグループの管理
+passwd   :: ユーザーのパスワードを変更
+chage    :: パスワードの有効期限の設定に特化したコマンド
+useradd  :: ユーザーアカウントを新規作成
+userdel  :: ユーザーアカウントを削除
+usermod  :: 既存のユーザーアカウントを変更
+groupadd :: グループアカウントを新規作成
+groupdel :: グループアカウントを削除
+groupmod :: 既存のグループアカウントの設定を変更
+id       :: ユーザーのUIDやGIDを表示
+groups   :: ユーザーの所属するグループを表示
+gpasswd  :: グループのパスワードやメンバーを設定
+            パスワードだけでなく、メンバーも設定できることに注意。
+
+## ジョブスケジューリング
+
+## ローカライゼーションと国際化
+
+```
+
 ---
 
 ## ユーザーとグループの管理
@@ -346,24 +367,6 @@ usermodは大文字。
 因みに解除  
 `usermod -U`  
 `passwd -u`  
-
-### ユーザー・グループアカウントに関するコマンドまとめ
-
-``` txt
-passwd :: ユーザーのパスワードを変更
-change :: パスワードの有効期限を変更
-useradd :: ユーザーアカウントを新規作成
-userdel :: ユーザーアカウントを削除
-usermod :: 既存のユーザーアカウントを変更
-groupadd :: グループアカウントを新規作成
-groupdel :: グループアカウントを削除
-groupmod :: 既存のグループアカウントの設定を変更
-id :: ユーザーのUIDやGIDを表示
-groups :: ユーザーの所属するグループを表示
-gpasswd :: グループのパスワードやメンバーを設定
-```
-
-gpasswdはパスワードだけでなく、メンバーも設定できることに注意。  
 
 ---
 
