--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -1,9 +1,12 @@
 # 8.ユーザーインターフェースとデスクトップ
 
-結局のところ、参考書の内容はすべて試験に出ると思っていいので、全部まとめて損はない気がする。
-コマンド、設定ファイル、設定ファイルの内容は基より、なんなら説明も含めて全部まとめてもいいのではないだろうか。
-やりすぎると見にくくなるから、加減は必要だな。
-とりあえずざっと見てから判断するか。
+``` txt
+## X11のインストールと設定
+
+## ディスプレイマネージャーの設定
+
+## アクセシビリティ
+```
 
 ## X11のインストールと設定
 
