sshまとめ途中。背に腹は代えられない

--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -62,6 +62,15 @@
 
 へー。悪い意味だったんだね。知らなかったわ。  
 
+## 背に腹はかえられぬ
+
+故事ことわざ辞典  
+背中を守るためといっても、五臓六腑がおさまっている大事な腹を犠牲にできないという意味から、大切なことのためには多少の損害はやむを得ないことをいう。  
+また、「背」を他者に、「腹」を自分自身に見立てて、切羽詰った状況では他を省みる暇などないという意味でも用いられる。  
+
+コトバンク  
+事態が切迫すると、肝心なものを守るために、相当な犠牲をはらうのもやむをえないことのたとえ。不本意でも、ほかに選択肢がないことを強く示唆する。  
+
 ## 約款(やっかん)
 
 多数の相手と同一の内容の契約を結ばなけれなならない性質の取引において、あらかじめ定型的に定められた契約の条項の総体のことである。
