--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -15,29 +15,29 @@
 
 ## ネットワークの設定
 ・/etc/services           :: ポート番号とサービスの対応が記述されたファイル。複数形であることに注意。
-・/etc/sysconfig/network  :: ホスト名を設定(Red Hat系)。ネットワーク機能の有効/無効やデフォルトゲートウェイ等も設定可能。  
-・/etc/hosts              :: IPアドレスとホスト名の対応付け。
-・/etc/hostname           :: ホスト名のみを設定(Debian系)
+・/etc/sysconfig/network  :: ホスト名を設定するファイル(Red Hat系)。ネットワーク機能の有効/無効やデフォルトゲートウェイ等も設定可能。  
+・/etc/hosts              :: IPアドレスとホスト名の対応付けファイル。
+・/etc/hostname           :: ホスト名のみを設定するファイル(Debian系)
 ・/etc/network/interfaces :: Debian系でネットワークインターフェースの設定を記述するファイル。  
 ・/etc/sysconfig/network-scriptsディレクトリ  
 ・NetworkManager :: 動的にネットワークを管理する仕組みです。
-・nmcli          :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)  
+・nmcli          :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)コマンド。  
 ・hostnamectl    :: systemdが動作するシステムにおける、ホスト名や関連する情報の表示、ホスト名の設定を行うコマンド。  
 
 ## ネットワークのトラブルシューティング
-・ping        :: 宛先アドレスに到達可能か確認。
+・ping        :: 宛先アドレスに到達可能か確認するコマンド。
 ・ping6       :: ipv6版
-・traceroute  :: 宛先アドレスまでの経路を確認。
+・traceroute  :: 宛先アドレスまでの経路を確認するコマンド。
 ・traceroute6 :: ipv6版。
-・tracepath   :: 宛先アドレスまでの経路と経路上の最大転送単位(PathMTU)を確認。
+・tracepath   :: 宛先アドレスまでの経路と経路上の最大転送単位(PathMTU)を確認するコマンド。
 ・tracepath6  :: ipv6版
 ・hostname    :: ホスト名を一時的に変更するコマンド。
 ・hostnamectl :: systemd用ホスト名を設定するコマンド。
 ・netstat     :: ネットワーク関連の情報を表示するコマンド。
 ・ss          :: netstatの後継。ネットワークのソケットの情報を表示するコマンド。
-・nc          :: テキストストリームにおけるcatコマンドと同様の働きをネットワーク上で行うコマンド。
+・nc          :: テキストストリームにおけるcatコマンドと同様の働きをネットワーク上で行うコマンド。簡易サーバーにもなる。
 ・route       :: ルーティングテーブルの表示や操作を行うコマンド。  
-・ip          :: IPアドレスやルーティングを設定するコマンド。  
+・ip          :: IPアドレスやルーティングを設定するコマンド。ifconfigの後継。
 ・ifconfig    :: インターフェースの情報の表示や設定を行うコマンド。
 ・ifup        :: 指定したインタフェースを有効にするコマンド。
 ・ifdown      :: 指定したインタフェースを無効にするコマンド。
