--- a/HTML/ノウハウ.md
+++ b/HTML/ノウハウ.md
@@ -59,3 +59,13 @@
 ## 文字を中央寄せにする
 
 [左揃えの文字を横幅が自動的に伸縮する中央寄せにする3つの方法](https://www.acky.info/tips/css/00017.html)  
+
+---
+
+## CSS Class指定の仕方
+
+[クラス名を使った指定](https://www.tagindex.com/stylesheet/basic/format2.html)  
+
+## CSS Class名命名規則
+
+[ID名とクラス名のサンプル集](https://www.tagindex.com/stylesheet/basic/naming.html)  
