jpeg,png、102はやったところまで。

--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -2,16 +2,24 @@
 
 ``` txt : ネットワーク関係早見表
 ## TCP/IPの基礎
-・IPv4、IPv6  
-・ユニキャスト、エニーキャスト、マルチキャスト  
-・ウェルノウンポート  
+・IPv4、IPv6
+・ユニキャスト、エニーキャスト、マルチキャスト、ブロードキャスト
+・ウェルノウンポート
 ・サブネット、ネットワークアドレス、ブロードキャストアドレス、プライベートアドレス  
 ・CIDR(Classless Inter-Domain Rounting)  
 ・TCP(Transmission Control Protocol)  
 ・IP(Internet Protocol)  
 ・UDP(User Datagram Protocol)  
-・ICMP(Internet Control Message Protocol)  
+・ICMP(Internet Control Message Protocol) :: パケットが到達出来なかった場合のエラーメッセージや制御メッセージを通知するプロトコル。
 ・ARP(Address Resolution Protocol)
+・ウェルノウンポートの最小値 : 0
+・Linuxの一般ユーザ権限で使用できるポートの最小値 : 1024
+A   ::   0.0.0.0 - 127.255.255.255 :: 255.0.0.0
+B   :: 128.0.0.0 - 191.255.255.255 :: 255.255.0.0
+C   :: 192.0.0.0 - 223.255.255.255 :: 255.255.255.0
+D   :: 224.0.0.0 - 239.255.255.255
+E   :: 240.0.0.0 - 255.255.255.255
+
 
 ## ネットワークの設定
 ・/etc/services           :: ポート番号とサービスの対応が記述されたファイル。複数形であることに注意。
@@ -20,37 +28,69 @@
 ・/etc/hostname           :: ホスト名のみを設定するファイル(Debian系)
 ・/etc/network/interfaces :: Debian系でネットワークインターフェースの設定を記述するファイル。  
 ・/etc/sysconfig/network-scriptsディレクトリ  
-・NetworkManager :: 動的にネットワークを管理する仕組みです。
-・nmcli          :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)コマンド。  
+・NetworkManager :: 動的にネットワークを管理する仕組み。
+※特定のインタフェースをNetworkManagerで管理しないように設定できる  
+※検出されたネットワークデバイスは自動でNetworkManagerによって管理される  
+・nmcli          :: NetworkManagerを管理するためのコマンドラインインタフェース（CLI)、及びコマンド。  
+full    :: インターネットにアクセス可能なネットワークに接続している。
+portal  :: インターネットにアクセスする前のcaptive portalの状態である。
+           ※captive portal(キャプティブポータル)
+           Wi-Fiホットスポットやホテルなどでインターネット利用前に強制的に認証や課金のWebページを参照させる技術。
+           ログインが完了しないとインターネットにアクセスできない。
+limited :: ネットワークに接続しているが、インターネットにアクセスできない。
+none    :: どのネットワークにも接続していない。
+unknown :: 接続状態が見つからない。
 ・hostnamectl    :: systemdが動作するシステムにおける、ホスト名や関連する情報の表示、ホスト名の設定を行うコマンド。  
 
 ## ネットワークのトラブルシューティング
 ・ping        :: 宛先アドレスに到達可能か確認するコマンド。
-・ping6       :: ipv6版
+・ping6       :: ipv6版。
 ・traceroute  :: 宛先アドレスまでの経路を確認するコマンド。
 ・traceroute6 :: ipv6版。
 ・tracepath   :: 宛先アドレスまでの経路と経路上の最大転送単位(PathMTU)を確認するコマンド。
 ・tracepath6  :: ipv6版
-・hostname    :: ホスト名を一時的に変更するコマンド。
-・hostnamectl :: systemd用ホスト名を設定するコマンド。
-・netstat     :: ネットワーク関連の情報を表示するコマンド。
+・hostname    :: 自ホストのホスト名やドメインを参照したり、ホスト名を一時的に変更するコマンド。
+・hostnamectl :: systemd用ホスト名を設定するコマンド。「nmcli general hostname ホスト名」でも表示可能。
+・netstat     :: さまざまな項目を指定して、ローカルホストのネットワーク関連の情報を表示するコマンド。
 ・ss          :: netstatの後継。ネットワークのソケットの情報を表示するコマンド。
 ・nc          :: テキストストリームにおけるcatコマンドと同様の働きをネットワーク上で行うコマンド。簡易サーバーにもなる。
 ・route       :: ルーティングテーブルの表示や操作を行うコマンド。  
+※ipアドレス指定する場合は「default gw」指定しない場合は「default」
 ・ip          :: IPアドレスやルーティングを設定するコマンド。ifconfigの後継。
 ・ifconfig    :: インターフェースの情報の表示や設定を行うコマンド。
+                 IPｱﾄﾞﾚｽ、ｻﾌﾞﾈｯﾄﾏｽｸ、ﾌﾞﾛｰﾄﾞｷｬｽﾄｱﾄﾞﾚｽ、送受信バイト数、MTU
+                 副作用としてインターフェースのアップ・ダウン状態が変更される事があるのと、何もない時がある。
 ・ifup        :: 指定したインタフェースを有効にするコマンド。
 ・ifdown      :: 指定したインタフェースを無効にするコマンド。
+デフォルトルート
+※他に宛先がない場合に参照されるルート  
+※Linuxのルーティングテーブルでは「default」と表示される  
+デフォルトゲートウェイ
+「ip route show」「netstat -r」「route」
 
 ## DNS
-・/etc/resolv.conf           :: 名前解決に利用するDNSサーバの指定や、ドメインの指定をするファイル。
-・/etc/nsswitch.conf         :: GNU Cライブラリが名前解決やサービス名解決の際の問い合わせ順序を指定するファイル。
+・/etc/resolv.conf  :: 名前解決に利用するDNSサーバの指定や、ドメインの指定をするファイル。
+                       nameserver :: 名前解決に使用するDNSサーバー(1サーバー1行)
+                       domain     :: 自サーバーの所属するドメイン名
+                       search     :: 名前解決の際に省略されうるドメイン名のリスト(スペース区切り)
+・/etc/nsswitch.conf:: GNU Cライブラリが名前解決やサービス名解決の際の問い合わせ順序を指定するファイル。
+・systemd-resolved  :: systemdの動作するシステムで名前解決を管理するデーモン。
 ・/etc/systemd/resolved.conf :: systemd-resolvedの設定ファイル。
 ・host     :: DNSサーバーを使ってホストやドメインに関する情報を表示する。最も基本となるコマンド。最小出力。
 ・dig      :: DNSサーバへ直接問い合わせて、指定した名前に関するDNSサーバからの応答を表示します。
 ・getent   :: 名前解決の順序を設定する「/etc/nsswitch.conf」に従って検索を行うコマンド。
 ・whois    :: 調べたいドメイン名を指定して、whoisデータベースに問い合わせるコマンド。
 ・nslookup :: WindowsにおいてDNSサーバに名前解決を問い合わせるWindowsのコマンド。
+
+DNSを利用し、ホスト名をIPアドレスに変換することができるコマンド  
+host、nslookup、getent、dig  
+出力する情報が最も少ないのはhostコマンド
+
+IPアドレスとホスト名の変換を行うコマンド  
+nslookup、host、dig  
+
+ドメイン情報の表示  
+dig  
 ```
 
 ## TCP/IPの基礎
@@ -359,9 +399,8 @@ IPアドレス ホスト名 ホストの別名
 127.0.0.1 localhost.localdomain localhost
 192.168.0.1 windsor.example.com windsor
 fc00:192:168:1::100 FileServer
-```
 
-``` txt : 表示例
+例2)
 # cat /etc/hosts
 112.78.124.10 pint-t.com
 192.168.1.100 FileServer
@@ -403,6 +442,9 @@ NetworkManagerはRed Hat Enterprise LinuxやCentOSで導入されている、動
 NetworkManagerでは、設定内容をまとめた「接続（connection）」とネットワークデバイスを示す「デバイス（インタフェース）」を別々に定義し、それらを関連付けて管理します。  
 既存の接続に新しいデバイスを関連付けることによって、構成変更にも動的に対応できます。  
 
+※特定のインタフェースをNetworkManagerで管理しないように設定できる  
+※検出されたネットワークデバイスは自動でNetworkManagerによって管理される  
+
 Ethernet,Wi-Fi,ブリッジといったネットワークデバイスと、デバイスによるネットワーク接続およびデフォルトルート、DNS名前解決を自動的に管理します。  
 I/F設定ファイルに特別な記述がない限り、DHCPを利用するので、ネットワークI/Fとデフォルトルートは自動設定される。  
 もちろん手動設定も可能。(らしい)  
@@ -431,6 +473,13 @@ NetworkManagerが管理していないインタフェースは管理下にない
 ・無効にするとネットワークに接続できなくなる  
 NetworkManagerは無効化できますが、接続設定は維持されネットワークに接続できなくなることはありません。  
 従来のinitスクリプトによるネットワーク設定も行えます。よって誤りです。  
+
+NetworkManagerで管理できるネットワークデバイスのタイプ  
+・ethernet  
+・wifi  
+・bridge  
+ethernetは有線、wifiは無線、bridgeは異なるネットワーク間の接続を示します。  
+「nmcli connection show」で確認可能。  
 
 ### nmtuiコマンド
 
@@ -1071,36 +1120,54 @@ example.com : ドメイン名
 今思ったらdns domain,nameserver,serachでdnsの頭文字になってる。  
 これならそれっぽく覚えられるな。  
 
-domainとsearchはどちらか片方を指定する。  
-両方指定した場合はsearchのほうが有効になる。  
+``` txt : 主な設定項目
+■nameserver
+名前解決に使用するDNSサーバーのIPアドレスを記述。(1サーバー1行)
+nameserverの指定は3台まで。  
+応答が無ければ次の行を参照する。  
+※「問い合わせて解決できなければ」ではなく、「応答がなければ」であることに注意。  
+
+■domain
+このホストが所属するドメイン名を記述する。  
+ドメイン名を含まないホスト名を検索する場合、このドメイン内を検索する。  
+複数のドメイン名を指定することはできない。  
+自ドメインを指定する際はdomainにドメイン名を記述する。  
+例)自ドメインが(pint-t.com)だった場合  
+「domain pint-t.com」
+
+■serach
+ドメイン名の省略時に補完するドメイン名を記述。  
+複数指定可能。スペースで区切る。左から右へ検索していく。  
+searchの指定を行った場合、ドットがないホスト名についてはsearchで指定したドメインを検索する。
+
+・nameserverは標準では3つまでしか設定できません。上限を変更する場合はライブラリの再コンパイルが必要になります。
+・domainは自身の所属するドメイン名を記述します。ホスト名のみの問い合わせの場合は同じドメインに所属するホストとみなされ、自動的にドメイン名が追加されます
+・searchは省略されうるドメイン名を列挙します。最大6つまでしか設定できず、上限を変更する場合はライブラリの再コンパイルが必要になります。
+・domainとsearchはいずれか一つしか設定できず、最後に記述されたものが有効になります。
+```
 
 ``` txt : 記述例
+例1)
 domain infraeye.com
 search infraeye.com infraeye.net infraeye.edu
 nameserver 192.168.231.2
-```
 
-- domain :  
-  このホストが所属するドメイン名を記述する。  
-  ドメイン名を含まないホスト名を検索する場合、このドメイン内を検索する。  
-  複数のドメイン名を指定することはできない。  
-  自ドメインを指定する際はdomainにドメイン名を記述する。  
-  例)自ドメインが(pint-t.com)だった場合  
-  `domain pint-t.com`  
-- serach :  
-  ドメイン名の省略時に補完するドメイン名を記述。  
-  複数指定可能。スペースで区切る。左から右へ検索していく。  
-  **searchの指定を行った場合、ドットがないホスト名についてはsearchで指定したドメインを検索する。**  
-- nameserver :  
-  DNSサーバーのIPアドレスを記述。  
-  nameserverの指定は3台まで。  
-  応答が無ければ次の行を参照する。  
-
-「nameserver」の後にDNSサーバのIPアドレスを、「search」の後にドメイン名検索リストを指定します。  
-
-``` txt
+例2)
 # cat /etc/resolv.conf
 search test1.domain test2.domain test3.domain
+nameserver 192.168.1.1
+nameserver 192.168.1.2
+nameserver 192.168.1.3
+```
+
+domain、searchの設定の違いについて、
+・DNSサーバではないサーバ（192.168.1.1）
+・名前解決の問い合わせに「NXDomain（存在しないドメイン）」を返すDNSサーバ（192.168.1.2）
+・名前解決の問い合わせ元（192.168.1.101）でのパケットキャプチャ
+
+``` txt
+#cat /etc/resolv.conf
+domain local.domain
 nameserver 192.168.1.1
 nameserver 192.168.1.2
 nameserver 192.168.1.3
@@ -1129,8 +1196,6 @@ nameserver 192.168.1.3
 したがって正解は  
 ・192.168.1.1から応答が無ければ、192.168.1.2に問い合わせる  
 ・ホスト名にtest1.domain、test2.domain、test3.domainの順にドメインを追加して名前解決を試みる  
-
-「問い合わせて解決できなければ」ではなく、「応答がなければ」であることに注意。  
 
 ### ドメイン
 
@@ -1286,28 +1351,6 @@ hosts :: nsswitch.conf で指定できるサービス名を指定する。(passw
 
 testsvの名前解決  
 `getent hosts testsv`  
-
-### 早見表
-
-``` txt
-host     :: DNSサーバーを使ってホストやドメインに関する情報を表示する。最も基本となるコマンド。
-dig      :: DNSサーバへ直接問い合わせて、指定した名前に関するDNSサーバからの応答を表示します。
-getent   :: 名前解決の順序を設定する「/etc/nsswitch.conf」に従って検索を行うコマンド。
-nslookup :: DNSサーバに名前解決を問い合わせるコマンド。Windowsのコマンド。
-netstat  :: さまざまな項目を指定して、ローカルホストのネットワーク関連の情報を表示するコマンド。
-hostname :: 自ホストのホスト名やドメインを参照したり、ホスト名を一時的に変更するコマンド。
-```
-
-DNSを利用し、ホスト名をIPアドレスに変換することができるコマンド  
-host、nslookup、getent、dig  
-
-IPアドレスとホスト名の変換を行うコマンド  
-nslookup、host、dig  
-
-DNSサーバに問い合わせて名前解決を行うコマンドには、nslookup、dig、hostがありますが、出力する情報が最も少ないのはhostコマンドです。  
-
-ドメイン情報の表示  
-dig  
 
 ---
 
