--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -12,6 +12,7 @@
 ・tcpd             :: TCP Wrapperのデーモン。
 ・/etc/hosts.allow :: TCPラッパーでアクセスを許可するホストを記述するファイル。
 ・/etc/hosts.deny  :: TCPラッパーでアクセスを拒否するホストを記述するファイル。
+・「/etc/hosts.allow」と「/etc/hosts.deny」の変更は直ちに反映される。該当サービスへの新たなアクセスから適用されます。既存の接続は切断出来ない。
 ・lsof             :: ファイルシステムやポートなど、システムのリソースを使用しているプロセスの情報を表示できるコマンド。
 ・nmap             :: ポートスキャンをするコマンド。
 ・fuser            :: システムの特定のリソースを使用中のプロセスを検索し、強制終了することのできるコマンド。
@@ -20,10 +21,16 @@
 ・/etc/nologin :: rootユーザ以外のユーザのログインを禁止するファイル。
 ・/etc/sudoers :: sudoコマンドの設定を行うファイル。
 ・/etc/shadow  :: シャドウパスワードやパスワードの有効期限に関する情報が記載されるファイル。
-・chage        :: パスワードの有効期限の設定に特化したコマンド。
+・chage        :: パスワードの有効期限の設定に特化したコマンド。詳細な設定や表示が可能。
+                  ユーザ「user1」のパスワードをいつでも変更できるようにしたい
+                  chage -m 0 user1
 ・passwd       :: ユーザーのパスワードを変更するコマンド。
 ・usermod      :: 既存のユーザーアカウントを変更するコマンド。
 ・su           :: 一時的に別のユーザーになるコマンド。
+                 ・引数に「-」をつけると、切り替わる先のユーザの環境変数を使用する
+                 ・ユーザー名を指定しない場合、rootユーザへ切り替わる
+                 ・ユーザを切り替える時に求められるパスワードは、切り替わる先のユーザのパスワード
+                 ・但し、rootユーザから別のユーザに切り替わる時はパスワードは要求されない
 ・sudo         :: 別のユーザーの権限でプログラムを実行するためのコマンド。
 ・visudo       :: /etc/sudoersを編集するコマンド。sudoコマンドの利用設定をするコマンド。
 ・ulimit       :: ユーザやシェルが利用できるリソースの制限を設定したり表示できるコマンド。
@@ -48,6 +55,7 @@
 ・ssh-keygen               :: 公開鍵と秘密鍵の鍵ペアを作成するコマンド。
 ・scp                      :: SSHの仕組みを使い、ホスト間で安全にファイルをコピーするコマンド。
 ・ssh-agent                :: メモリ上に秘密鍵を保管しておく認証エージェント。及びそのコマンド。
+                              バックグラウンドで動作する。ssh-agentによって起動されたシェルでssh-addやsshコマンドを実行する。
 ・ssh-add                  :: 認証エージェントであるssh-agentに秘密鍵を登録するコマンド。
 ・ﾎﾟｰﾄﾌｫﾜｰﾃﾞｨﾝｸﾞ           :: あるポートに送られてきたTCPパケットをSSHを使った安全な通信路を経由して、リモートホストの任意のポートに転送すること。
                               SSHクライアント to SSHサーバー  
@@ -500,7 +508,7 @@ chage [オプション] [ユーザー名]
 中でも「chage」はパスワードの有効期限の設定に特化したコマンド（CHange password AGEの略）で、詳細な設定やその表示が可能です。  
 なお、パスワードの有効期限に関する情報は「/etc/shadow」ファイルに保存されます。  
 
-なお、「passwd」コマンドでパスワードの最長有効日数を10日にする場合は「passwd -x 10 user1」とします。  
+「passwd」コマンドでパスワードの最長有効日数を10日にする場合は「passwd -x 10 user1」とします。  
 「usermod」コマンドにはこれを実現するオプションは存在しませんが、  
 アカウントの有効期限やパスワードの使用期限が切れてからアカウントを永久に使用不能になるまでの日数を設定できますので、正解の1つとなります。  
 
@@ -664,7 +672,7 @@ SSHに関する主なファイル
 ### /etc/ssh/sshd_config  
 
 sshdの設定ファイル  
-[OpenSSH (sshd) のデフォルト値](https://qiita.com/bezeklik/items/b728ea2de4924f89a787  )
+[OpenSSH (sshd) のデフォルト値](https://qiita.com/bezeklik/items/b728ea2de4924f89a787)  
 めっちゃたくさんある。  
 
 ``` txt : sshdの主なディレクティブ  
@@ -929,7 +937,7 @@ HostName     :: 実際の接続ホストのアドレス。IPアドレスや/etc/
                 これがあるとホスト名を省略できる。  
 User         :: ユーザー名。これがあるとユーザー名を省略できる。  
 Port         :: ポート番号。これがあると 「-p ポート番号」 って書かなくてよくなる。  
-IdentityFile :: 秘密鍵ファイル。これがあると 「-i 秘密鍵ファイルのパス」 って書かなくてよくなる。  
+IdentityFile :: 秘密鍵ファイル。これがあると 「ssh -i 秘密鍵ファイルのパス」 って書かなくてよくなる。  
 
 例)
 Host 接続コマンド名（任意の名前）
