--- a/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
+++ b/LPIC/102/8.ユーザインターフェイスとデスクトップ.md
@@ -2,10 +2,56 @@
 
 ``` txt
 ## X11のインストールと設定
+・X Window System(X,X11)
+・Xサーバ :: キーボードやディスプレイなどのハードウェアを管理するソフトウェア。  
+・xhost
+・xauth
+・Wayland :: 
+・/etc/X11/xorg.conf :: X.Orgの設定ファイル。
+・Files        :: フォントやカラーデータベースファイルのパス名
+・Module       :: ダイナミックモジュールの設定。組み込むモジュールの指定。
+                  モジュールとは、Xサーバ本体には無い機能を新たに追加するためのファイルのこと。
+・InputDevice  :: キーボードやマウス等の入力装置の設定
+・InputClass   :: 入力装置の「クラス」に適用される設定
+・Device       :: ビデオカードの設定
+・Monitor      :: モニターの設定
+・Modes        :: ビデオモードの設定
+・Screen       :: ディスプレイの色深度(表示色数)や画面サイズの設定
+・ServerLayout :: 入出力デバイスとスクリーンの指定
 
 ## ディスプレイマネージャーの設定
+・ディスプレイマネージャ :: ランレベル5の時グラフィカルログイン画面を提供する。他ログイン認証、ログイン後のデスクトップ環境の準備を行います。  
+・XDM :: X.Org標準のディスプレイマネージャ
+・GDM :: GNOMEの標準ディスプレイマネージャー  
+・KDM :: KDEの標準ディスプレイマネージャー  
+・SDDM(Simple Desktop Display Manager) :: kdmの後継。KDE Plasmaの標準ディスプレイマネージャー  
+・LightDM :: Ubuntuの標準ディスプレイマネージャー  
+・ウィンドウマネージャー :: ウィンドウの概観、アイコンやカーソル、メニューなどを提供するXクライアントのアプリケーション。
+                            最小限の機能を備えた「twm」、KDE標準の「kWin」などがあります。他「Mutter」等。
+・統合デスクトップ環境 :: ウィンドウマネージャも含め、アプリケーションまで揃えて統一的な操作を提供したデスクトップ環境。  
+                          代表例 : GNOME,KDE Plasma 軽快なデスクトップ環境例 : Xfce,LXDE,MATE  
+・VNC(Virtual Network Computing) :: 
+・RDP(Remote Desktop Protocol) Windows標準のリモートデスクトップ機能で使用される通信プロトコル。
+・SPICE(Simple Protocol for Independent Computing Environment) 画面転送プロトコル。通信の暗号化やマルチモニタなど、多数の機能に対応している。  
+・XDMCP(X Display Manager Control Protocol) XサーバとXクライアント間を制御するプロトコル。  
+※ヒエラルキー  
+統合デスクトップ環境 > ディスプレイマネージャー、ウィンドウマネージャー > ディスプレイマネージャーXDMの仕組み(X11)
 
 ## アクセシビリティ
+スティッキーキー :: 固定キー。修飾キー(Shift,Ctrl,Altキー等)の後に入力したキーを同時押しとみなす。
+スローキー       :: 所定の時間、キーを押し続けないと入力を認識しない。
+バウンスキー     :: 同じキー入力は一定時間無視する。
+トグルキー       :: NumLock,CapsLock,ScrollLockキーがオンだと一回、オフだと2回ビープ音がなる。
+マウスキー       :: マウスデバイスの代わりにテンキーを使ってマウスポインタを操作する。
+リピートキー     :: 所定の時間、キーが押されていなければリピートしない。
+
+ハイコントラスト   :: スクリーンの表示色を反転したり、コントラストを協調して見やすくする。
+スクリーンリーダー :: スクリーンに表示された文字を読み上げる。
+点字ディスプレイ   :: 文字データを点字に変換して専用点字ディスプレイに出力する。
+点字キーボード     :: 点字の1文字を表す6つの点にそれぞれ対応する6点キーで入力。
+gok                :: GNOME Onscreen Keybord。キーボードをスクリーンに表示する。
+orca               :: スクリーンリーダーや拡大鏡を提供するGNOMEの機能。
+emacspeak          :: Emacsのスクリーンリーダー。  
 ```
 
 ## X11のインストールと設定
@@ -74,17 +120,17 @@ xorg.confファイルは複数のセクションから構成されている。
 各セクションは「Section "セクション名"」から始まり、「EndSection」で終わる。  
 
 ``` txt : xorg.confの主なセクション
-Files : フォントやカラーデータベースファイルのパス名
-Module : ダイナミックモジュールの設定。
-         組み込むモジュールの指定。
-         モジュールとは、Xサーバ本体には無い機能を新たに追加するためのファイルのこと。
-InputDevice : キーボードやマウス等の入力装置の設定
-InputClass : 入力装置の「クラス」に適用される設定
-Device : ビデオカードの設定
-Monitor : モニターの設定
-Modes : ビデオモードの設定
-Screen : ディスプレイの色深度(表示色数)や画面サイズの設定
-ServerLayout : 入出力デバイスとスクリーンの指定
+Files        :: フォントやカラーデータベースファイルのパス名
+Module       :: ダイナミックモジュールの設定。
+                組み込むモジュールの指定。
+                モジュールとは、Xサーバ本体には無い機能を新たに追加するためのファイルのこと。
+InputDevice  :: キーボードやマウス等の入力装置の設定
+InputClass   :: 入力装置の「クラス」に適用される設定
+Device       :: ビデオカードの設定
+Monitor      :: モニターの設定
+Modes        :: ビデオモードの設定
+Screen       :: ディスプレイの色深度(表示色数)や画面サイズの設定
+ServerLayout :: 入出力デバイスとスクリーンの指定
 ```
 
 ServerLayoutだけ入出力デバイスとスクリーンという、一見すると関係ない組み合わせなので注意。  
@@ -189,11 +235,11 @@ startxコマンドをCUI環境（ランレベル3）で実行すると、X Windo
 
 xdm-config :: XDMの設定ファイル。
 Xresources :: XDMログイン画面のデザイン設定。
-Xaccess :: ホストからXDMへアクセス許可の設定。
-Xsetup_0 :: XDMログイン画面表示前に実行されるスクリプト。
-            XDMのカラー設定や背景（壁紙）の指定を行う。
-            ファイル名の末尾にある「_0」はディスプレイを識別するための番号（ディスプレイ番号）。
-Xsession :: XDMのログイン後に実行されるスクリプト。
+Xaccess    :: ホストからXDMへアクセス許可の設定。
+Xsetup_0   :: XDMログイン画面表示前に実行されるスクリプト。
+              XDMのカラー設定や背景（壁紙）の指定を行う。
+              ファイル名の末尾にある「_0」はディスプレイを識別するための番号（ディスプレイ番号）。
+Xsession   :: XDMのログイン後に実行されるスクリプト。
 ```
 
 ### Wayland
